--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>Welcome to Jora computers</h2>
+		   					<h2>Welcome Chris computers</h2>
 		   					<p><a href="services.html" target="_blank" class="btn btn-primary btn-lg">Get Started</a></p>
 		   				</div>
 		   			</div>
