changed the pictures and added more

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="services">Services</a></li>
-						<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>
+						<!--<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>-->
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -479,9 +479,7 @@
 					<a href="#">Home</a>
 					·
 					<a href="#">Services</a>
-					·
-					<a href="#">Portfolio</a>
-					·
+					.
 					<a href="#">Blog</a>
 					·
 					<a href="#">Contact</a>
