new changes added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="services">Services</a></li>
 						<!--<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>-->
-						<li><a href="#" data-nav-section="blog">Blog</a></li>
+						<li><a href="#" data-nav-section="blog">Shop</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -154,41 +154,15 @@
 								</div>
 							</div>
 							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-layout"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Web Design</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-									</div>
-								</div>
+
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 animate-box" data-animate-effect="fadeIn">
 						<div class="row">
+
 							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-pencil"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Copy Writing</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-cog"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>CMS Development</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-									</div>
-								</div>
+
 							</div>
 							<div class="col-md-12">
 								<div class="feature-left">
@@ -480,7 +454,7 @@
 					·
 					<a href="#">Services</a>
 					.
-					<a href="#">Blog</a>
+					<a href="#">Shop</a>
 					·
 					<a href="#">Contact</a>
 				</p>
