changed the footer design and added two pictures

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 
 			<div class="container-fluid">
-				<div class="row" style="background-color: red; height: 190px;">
+				<div class="row" style="background-color: red; height: 190px; color: #5bc0de;">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 						<h2>Portfolio</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
@@ -446,8 +446,28 @@
 	<footer class="footer-distributed" >
 
 			<div class="footer-left">
+				<div class="row">
 
-				<h3>JORA<span> Computers</span></h3>
+					<div id="index-gallery">
+
+						<div class="item">
+							<img  class="teamfoot" src="images/passport.jpg" alt=""/>
+							<p>Joshua Tobi <br>
+								 <small><em>CEO</em> : Hardware Engineer</small>
+							</p>
+
+						</div>
+
+						<div class="item">
+							<img  class="teamfoot" src="images/passport.jpg" alt=""/>
+							<p>Chris <br>
+								<small>Software Engineer</small>
+							</p>
+
+						</div>
+
+					</div>
+				</div>
 
 				<p class="footer-links">
 					<a href="#">Home</a>
@@ -477,7 +497,7 @@
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:support@company.com">jayej23@gmail.com</a></p>
+					<p><a href="mailto:jayej23@gmail.com">jayej23@gmail.com</a></p>
 				</div>
 
 			</div>
