fix the text color for services and facts

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="gtco-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Services</h2>
+						<h2 style="color: red">Services</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
@@ -369,8 +369,8 @@
 
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Facts About Us</h2>
-						<p>see below.</p>
+						<h2 style="color: red">Facts About Us</h2>
+						<p style="color: red">see below.</p>
 					</div>
 				</div>
 
