change the position of portfolio and shop and fixed the scroll issues

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="services">Services</a></li>
-						<!--<li><a href="#" data-nav-section="portfolio">Portfolio</a></li>-->
-						<li><a href="#" data-nav-section="blog">Shop</a></li>
+						<li><a href="#" data-nav-section="shop">Shop</a></li>
+                        <li><a href="#" data-nav-section="portfolio">Portfolio</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
 				</div>
@@ -192,77 +192,7 @@
 			</div>
 		</div>
 
-		<div class="gtco-section" id="gtco-portfolio" data-section="portfolio">
-
-
-			<div class="container-fluid">
-				<div class="row" style="background-color: red; height: 190px; color: #5bc0de;">
-					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Portfolio</h2>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="gtco-container">
-				
-				
-				<div class="row">
-					<div class="col-md-4">
-						<a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/light.png" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/light.png" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/light.png" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-
-					<div class="col-md-4">
-						<a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/light.png" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/light.png" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
-							<figure>
-								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="images/light.png" alt="Image" class="img-responsive">
-							</figure>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	
-	<div id="gtco-blog" data-section="blog">
+	<div id="gtco-blog" data-section="shop">
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
@@ -363,6 +293,76 @@
 		</div>
 	</div>
 
+        <div class="gtco-section" id="gtco-portfolio" data-section="portfolio">
+
+
+            <div class="container-fluid">
+                <div class="row" style="background-color: red; height: 190px; color: #5bc0de;">
+                    <div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+                        <h2>Portfolio</h2>
+                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="gtco-container">
+
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
+                            <figure>
+                                <div class="overlay"><i class="ti-plus"></i></div>
+                                <img src="images/light.png" alt="Image" class="img-responsive">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
+                            <figure>
+                                <div class="overlay"><i class="ti-plus"></i></div>
+                                <img src="images/light.png" alt="Image" class="img-responsive">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
+                            <figure>
+                                <div class="overlay"><i class="ti-plus"></i></div>
+                                <img src="images/light.png" alt="Image" class="img-responsive">
+                            </figure>
+                        </a>
+                    </div>
+
+                    <div class="col-md-4">
+                        <a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
+                            <figure>
+                                <div class="overlay"><i class="ti-plus"></i></div>
+                                <img src="images/light.png" alt="Image" class="img-responsive">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
+                            <figure>
+                                <div class="overlay"><i class="ti-plus"></i></div>
+                                <img src="images/light.png" alt="Image" class="img-responsive">
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="images/light.png" class="gtco-card-item image-popup" title="Project name here.">
+                            <figure>
+                                <div class="overlay"><i class="ti-plus"></i></div>
+                                <img src="images/light.png" alt="Image" class="img-responsive">
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 	<div class="gtco-section-overflow">
 		<div id="gtco-counter" class="gtco-section">
 			<div class="gtco-container">
@@ -441,7 +441,7 @@
 	</div>
 	
 
-	<div id="gtco-contact" data-section="contact" >
+	<div id="gtco-contact" data-section="contact" class="gtco-contact">
 
 	<footer class="footer-distributed" >
 
